implement some basic triggers